<resources>
    <string name="number_mark_crank">骚扰</string>
    <string name="number_mark_fraud">诈骗</string>
    <string name="number_mark_promote_sales">业务推销</string>
    <string name="number_mark_house_agent">房产中介</string>
    <string name="duoqu_huawei_number_name">华为</string>
    <string name="duoqu_open_net">访问网址</string>
    <string name="duoqu_reply_sms">回复短信</string>
    <string name="duoqu_forword_sms">转发短信</string>
    <string name="duoqu_call_phone">拨打电话</string>
    <string name="duoqu_open_text">打开原文</string>
    <string name="duoqu_send_email">发送邮件</string>
    <string name="duoqu_open_map">打开地图</string>
    <string name="duoqu_chonzhi">充值</string>
    <string name="duoqu_call">来电</string>
    <string name="duoqu_errortext">找不到网页，请您检查当前网络是否通畅!</string>
    <string name="duoqu_harass">骚扰电话</string>
    <string name="duoqu_unknownumber">未知电话</string>
    <string name="tip_services_provide">米佳信析宝提供服务</string>
    <string name="tip_data_source">数据来源百度地图</string>
    <string name="tip_load_more">点击加载更多数据</string>
    <string name="tip_loading">加载中...</string>
    <string name="tip_nearby_point_loading">附近网点加载中...</string>
    <string name="tip_nearby_point_not_find">没有找到相关结果！</string>
    <string name="tip_nearby_point_refresh">刷新试试</string>
    <string name="tip_nearby_point_network_lose">对不起，网络出错了，轻触屏幕重新加载</string>
    <string name="duoqu_calls_reminder_discern_call">来电识别</string>
    <string name="duoqu_calls_reminder_side_phone_num">电话号码</string>
    <string name="duoqu_calls_frequency">来电次数</string>
    <string name="duoqu_calls_calltime">来电时间</string>
    <string name="duoqu_calls_last_calltime">末次时间</string>
    <string name="duoqu_calls_sideattribution">对方归属地</string>
    <string name="duoqu_calls_ownstate">来电时状态</string>
    <string name="duoqu_calls_sidestate">对方状态</string>
    <string name="duoqu_calls_callingtime">呼叫时间</string>
    <string name="duoqu_no_train_info">暂无{0}到站信息选择</string>
    <string name="duoqu_select_destination">选择到达站</string>
    <string name="duoqu_select_train_num">选择车次</string>
    <string name="duoqu_fight">航班</string>
    <string name="duoqu_select_fight_num">选择航班</string>
    <string name="duoqu_no_fight_info">暂时无法切换航班信息</string>
    <string name="duoqu_cancel">取消</string>
    <string name="duoqu_confirm">确定</string>
    <string name="duoqu_direction">方向</string>
    <string name="duoqu_train_time">次</string>
    <string name="duoqu_from">开</string>
    <string name="duoqu_to">到</string>
    <string name="duoqu_double_line">— —</string>
    <string name="duoqu_double_line_en">- -</string>
    <string name="duoqu_double_line_arr_time">未知到达时间</string>
    <string name="duoqu_double_line_dep_time">未知出发时间</string>
    <string name="duoqu_web_not_find_page">找不到网页</string>
    <string name="duoqu_tip_false">缺少参数，无法打开百度地图</string>
    <string name="duoqu_tip_duoqu_name">多趣</string>
    <string name="duoqu_web_network_fail">网络未连接</string>
    <string name="duoqu_web_loading">Loading</string>
    <string name="duoqu_web_reset">解除默认选择</string>
    <string name="safety_sms_dialog_title">Verification code security</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_call">Call</string>
    <string name="menu_search">Search</string>
    <string name="menu_debug_dump">DEBUG DUMP</string>
    <string name="menu_cell_broadcasts">Broadcast messages</string>
    <string name="view_message_details">View details</string>
    <string name="view_delivery_report">View report</string>
    <string name="delete_message">Delete</string>
    <string name="menu_forward">Forward</string>
    <string name="copy_message_text">Copy text</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="remove_slide">Remove slide</string>
    <string name="add_slide">Add slide</string>
    <string name="discard_slideshow">Discard slideshow</string>
    <string name="remove_text">Remove text</string>
    <string name="add_picture">Add picture</string>
    <string name="remove_picture">Remove picture</string>
    <string name="add_music">Add music</string>
    <string name="remove_music">Remove music</string>
    <string name="add_video">Add video</string>
    <string name="remove_video">Remove video</string>
    <string name="discard">Discard</string>
    <string name="preview_slideshow">Preview</string>
    <string name="duration_sec">Duration (%s sec)</string>
    <string name="menu_view_contact">View contact</string>
    <string name="pref_summary_mms_read_reports">Request a read report for each MMS you send</string>
    <string name="pref_summary_mms_group_mms">Use MMS to send a single message when there are multiple recipients</string>
    <string name="pref_title_manage_sim_messages">Manage USIM card messages</string>
    <string name="pref_title_mms_group_mms">Group messaging</string>
    <string name="pref_title_mms_read_reports">Read reports</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_lock">Lock</string>
    <string name="menu_unlock">Unlock</string>
    <string name="attach_take_photo">Camera</string>
    <string name="attach_record_video">Video</string>
    <string name="attach_sound">Audio</string>
    <string name="attach_record_sound">Recording</string>
    <string name="copy_to_sdcard">Save attachments</string>
    <string name="save_ringtone">Save as ringtone</string>
    <string name="save_to_contacts">Save vCard</string>
    <string name="view_vcard_details">View vCard details</string>
    <string name="common_phrase">Common phrases</string>
    <string name="menu_retry_sending">Retry sending</string>
    <string name="pref_title_mms_display_mode">Display mode</string>
    <string name="pref_summary_mms_display_mode">Conversation</string>
    <string name="pref_title_mms_save_mode">Storage location</string>
    <string name="pref_title_mms_save_mode_sub0">Card 1 storage location</string>
    <string name="pref_title_mms_save_mode_sub1">Card 2 storage location</string>
    <string name="pref_summary_mms_save_mode_default">Phone</string>
    <string name="pref_title_mms_expire">MMS validity period</string>
    <string name="pref_summary_mms_expire_mode_max">Maximum</string>
    <string name="prefDefault_mms_expire_max">0</string>
    <string name="prefDefault_mms_expire_slidesmoothshowactivity">3</string>
    <string name="pref_summary_mms_expire_mode_slideshowactivity3">3 days</string>
    <string name="pref_title_storage_status">Current storage use</string>
    <string name="pref_title_manage_simuim2_messages_ug">Manage card 2 messages</string>
    <string name="pref_title_simuim1_center_number_ug">SIM 1 SMS center number</string>
    <string name="pref_title_simuim2_center_number_ug">SIM 2 SMS center number</string>
    <string name="sms_center_number">SMS center number</string>
    <string name="menu_save_to_calendar">Import vCalendar</string>
    <string name="menu_make_all_as_read">Mark all as read</string>
    <string name="menu_overflow">Menu</string>
    <string name="pref_title_sms_wappush_enable">WAP push service</string>
    <string name="menu_add_to_contactlist">Add to Contacts</string>
    <string name="mms_auto_retrieval_text">MMS auto-retrieve</string>
    <string name="mms_auto_retrieval_during_roaming_text">Retrieve automatically when roaming</string>
    <string name="pref_title_mms_auto_retrieval_during_roaming_ug_card1">Retrieve automatically when SIM 1 roaming</string>
    <string name="pref_title_mms_auto_retrieval_during_roaming_ug_card2">Retrieve automatically when SIM 2 roaming</string>
    <string name="menu_check_group_participants">View recipients</string>
    <string name="menu_add_to_blacklist">Add to blacklist</string>
    <string name="menu_remove_from_blacklist">Remove from blacklist</string>
    <string name="pref_title_mms_auto_reply_read_reports">Send read report</string>
    <string name="pref_summary_mms_auto_reply_read_reports">Send a read report if requested by the MMS sender</string>
    <string name="menu_copy_to_sim">Copy to SIM card</string>
    <string name="creation_mode">Create mode</string>
    <string name="prefDefault_creation_mode_freenmode">freemodemode</string>
    <string name="prefDefault_summary_freemode">Free</string>
    <string name="pref_title_sms_optimization">7-bit optimization</string>
    <string name="pref_summary_sms_optimization_characters">Convert to 7-bit encoding so that a single message can contain up to 160 characters</string>
    <string name="menu_copy_to_card1">Copy to SIM 1</string>
    <string name="menu_copy_to_card2">Copy to SIM 2</string>
    <string name="advanced_settings">Advanced</string>
    <string name="smart_archive_title">Archive info messages</string>
    <string name="mms_myfavorite_common">Favorites</string>
    <string name="copy_to_favorites">Copy to favorites</string>
    <string name="sms_recovery_title">SMS recycle bin</string>
    <string name="mms_pref_title_cancel_send">Cancel sending</string>
    <string name="smart_sms_setting_title">Smart SMS</string>
    <string name="smart_sms_setting_status_open">Enabled</string>
    <string name="pref_other_settings_title">Other</string>
    <string name="pref_title_mms_delivery_reports_content">Delivery reports</string>
    <string name="pref_title_mms_delivery_reports_summery">Request a delivery report for each message you send</string>
    <string name="pref_common_settings_title_content">Common</string>
    <string name="signature_title">Signature</string>
    <string name="sms_recovery_summary_content">Deleted messages will be temporarily placed in the recycle bin for 15 days before being permanently erased</string>
    <string name="verifition_sms_protect_enable_summary">Do not allow third party apps to access and use your verification codes</string>
    <string name="pref_im_settings_title">Instant message (IM) settings</string>
    <string name="im_enable_title">IM Enable</string>
    <string name="im_enable_delivery_report_title">IM delivery report</string>
    <string name="im_enable_display_report_title">Read reports</string>
    <string name="im_enable_display_report_detail">Request/Send read report for each message</string>
    <string name="im_enable_thread_mix_display_title">Integration of information and IM messages</string>
    <string name="im_enable_thread_mix_display_detail">The same number of information and IM message displayed in the same session</string>
    <string name="auto_accept_group_invite_title">Auto-accept group invitation</string>
    <string name="show_filesize_warning_dialog_title">Show warning dialog box</string>
    <string name="auto_accept_file_title">Auto-accept files</string>
    <string name="roam_auto_accept_file_title">Auto-accept files while roaming</string>
    <string name="group_message_enable_delivery_report_title">Group chat delivery reports</string>
    <string name="group_message_enable_delivery_report_detail">Request a delivery report for each group chat message you send</string>
    <string name="nickname_title">My group chat nickname</string>
    <string name="nickname_dialog_et_hint">Unnamed</string>
    <string name="rcs_file_too_big_explain">Display a notification when the file size exceeds the warning threshold</string>
    <string name="pref_ringTong_and_vibrate">Ringtones and vibration</string>
    <string name="mms_pref_title_risk_url_check">Website identification</string>
    <string name="risk_url_check_summary_content">Identify malicious or unverified websites (Internet access required)</string>
    <string name="always_receive_and_send_mms">Always download and send MMS</string>
    <string name="always_receive_and_send_mms_summary_new">Download and send MMS messages even when mobile data is off</string>
    <string name="pin_up_unread_message_title">Pin unread messages</string>
    <string name="pin_up_unread_message_summary">Pin unread messages to the top of the list</string>
</resources>