<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_delete" android:visible="false" android:title="@string/delete_message" />
    <item android:id="@+id/menu_edit" android:visible="false" android:title="@string/menu_edit" />
    <item android:id="@+id/menu_retry_sending" android:visible="false" android:title="@string/menu_retry_sending" />
    <item android:id="@+id/menu_add_to_favorites" android:visible="false" android:title="@string/copy_to_favorites" />
    <item android:id="@+id/menu_copy_to_sim" android:visible="false" android:title="@string/menu_copy_to_sim" />
    <item android:id="@+id/menu_copy_to_sim1" android:visible="false" android:title="@string/menu_copy_to_card1" />
    <item android:id="@+id/menu_copy_to_sim2" android:visible="false" android:title="@string/menu_copy_to_card2" />
    <item android:id="@+id/copy_message_text" android:visible="false" android:title="@string/copy_message_text" />
    <item android:id="@+id/menu_forward" android:visible="false" android:title="@string/menu_forward" />
    <item android:id="@+id/menu_unlock" android:visible="false" android:title="@string/menu_unlock" />
    <item android:id="@+id/menu_lock" android:visible="false" android:title="@string/menu_lock" />
    <item android:id="@+id/save_ringtone" android:visible="false" android:title="@string/save_ringtone" />
    <item android:id="@+id/save_to_contacts" android:visible="false" android:title="@string/save_to_contacts" />
    <item android:id="@+id/view_vcard_details" android:visible="false" android:title="@string/view_vcard_details" />
    <item android:id="@+id/menu_save_to_calendar" android:visible="false" android:title="@string/menu_save_to_calendar" />
    <item android:id="@+id/copy_to_sdcard" android:visible="false" android:title="@string/copy_to_sdcard" />
    <item android:id="@+id/view_message_details" android:visible="false" android:title="@string/view_message_details" />
    <item android:id="@+id/view_delivery_report" android:visible="false" android:title="@string/view_delivery_report" />
</menu>
