<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/csp_menu_msg_compose_holo_dark" android:id="@+id/menu_call_recipient" android:visible="false" android:title="@string/menu_call" />
    <item android:id="@+id/menu_view_contact" android:visible="false" android:title="@string/menu_view_contact" />
    <item android:id="@+id/menu_add_to_contact" android:visible="false" android:title="@string/menu_add_to_contactlist" />
    <item android:id="@+id/menu_group_participants" android:visible="false" android:title="@string/menu_check_group_participants" />
    <item android:id="@+id/menu_discard" android:visible="false" android:title="@string/discard" />
    <item android:id="@+id/menu_remove_from_blacklist" android:visible="false" android:title="@string/menu_remove_from_blacklist" />
    <item android:id="@+id/menu_add_to_blacklist" android:visible="false" android:title="@string/menu_add_to_blacklist" />
    <item android:id="@+id/menu_debug_dump" android:visible="false" android:title="@string/menu_debug_dump" />
</menu>
