<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/androidhwext" androidhwext:key="pref_key_root">
    <Preference androidhwext:title="@string/common_phrase" androidhwext:key="pref_key_common_phrase" androidhwext:widgetLayout="@layout/mms_preference_widget_arrow" androidhwext:preferenceID="@+id/advanced_pref_common_phrase" />
    <com.android.mms.ui.HwPreference androidhwext:layout="@layout/mms_preference_status" androidhwext:title="@string/signature_title" androidhwext:key="pref_key_signature" androidhwext:widgetLayout="@layout/mms_preference_widget_layout" androidhwext:preferenceID="@+id/advanced_pref_signature" />
    <ListPreference androidhwext:persistent="true" androidhwext:entries="@array/save_mode_entries" androidhwext:layout="@layout/mms_preference_status" androidhwext:title="@string/pref_title_mms_save_mode" androidhwext:key="pref_key_save_mode" androidhwext:summary="@string/pref_summary_mms_save_mode_default" androidhwext:widgetLayout="@layout/mms_preference_widget_arrow" androidhwext:defaultValue="1" androidhwext:entryValues="@array/save_mode_values" androidhwext:preferenceID="@+id/advanced_pref_mms_save_mode" />
    <ListPreference androidhwext:persistent="true" androidhwext:entries="@array/save_mode_entries" androidhwext:layout="@layout/mms_preference_status" androidhwext:title="@string/pref_title_mms_save_mode_sub0" androidhwext:key="pref_key_save_mode_sub0" androidhwext:summary="@string/pref_summary_mms_save_mode_default" androidhwext:widgetLayout="@layout/mms_preference_widget_arrow" androidhwext:defaultValue="1" androidhwext:entryValues="@array/save_mode_values" androidhwext:preferenceID="@+id/advanced_pref_mms_save_mode_sub0" />
    <ListPreference androidhwext:persistent="true" androidhwext:entries="@array/save_mode_entries" androidhwext:layout="@layout/mms_preference_status" androidhwext:title="@string/pref_title_mms_save_mode_sub1" androidhwext:key="pref_key_save_mode_sub1" androidhwext:summary="@string/pref_summary_mms_save_mode_default" androidhwext:widgetLayout="@layout/mms_preference_widget_arrow" androidhwext:defaultValue="1" androidhwext:entryValues="@array/save_mode_values" androidhwext:preferenceID="@+id/advanced_pref_mms_save_mode_sub1" />
    <Preference androidhwext:title="@string/sms_center_number" androidhwext:key="sms_center_number" androidhwext:widgetLayout="@layout/mms_preference_widget_arrow" androidhwext:preferenceID="@+id/advanced_pref_sms_center_number" />
    <Preference androidhwext:title="@string/pref_title_simuim1_center_number_ug" androidhwext:key="pref_key_simuim1_message_center" androidhwext:widgetLayout="@layout/mms_preference_widget_arrow" androidhwext:preferenceID="@+id/simuim1_center_number_ug" />
    <Preference androidhwext:title="@string/pref_title_simuim2_center_number_ug" androidhwext:key="pref_key_simuim2_message_center" androidhwext:widgetLayout="@layout/mms_preference_widget_arrow" androidhwext:preferenceID="@+id/simuim2_center_number_ug" />
    <Preference androidhwext:title="@string/pref_title_manage_sim_messages" androidhwext:key="pref_key_manage_sim_messages" androidhwext:widgetLayout="@layout/mms_preference_widget_arrow" androidhwext:preferenceID="@+id/manage_sim_messages" />
    <com.android.mms.ui.EmuiSwitchPreference androidhwext:title="@string/pref_title_mms_group_mms" androidhwext:key="pref_key_mms_group_mms" androidhwext:summary="@string/pref_summary_mms_group_mms" androidhwext:defaultValue="false" androidhwext:preferenceID="@+id/mms_group_mms" />
    <Preference androidhwext:title="@string/pref_title_manage_simuim2_messages_ug" androidhwext:key="pref_key_manage_simuim2_messages" androidhwext:widgetLayout="@layout/mms_preference_widget_arrow" androidhwext:preferenceID="@+id/manage_simuim2_messages_ug" />
    <com.android.mms.ui.EmuiSwitchPreference androidhwext:title="@string/pref_title_sms_optimization" androidhwext:key="pref_key_sms_optimization_characters" androidhwext:summary="@string/pref_summary_sms_optimization_characters" androidhwext:defaultValue="true" androidhwext:preferenceID="@+id/sms_optimization" />
    <com.android.mms.ui.EmuiSwitchPreference androidhwext:title="@string/pref_title_mms_read_reports" androidhwext:key="pref_key_mms_read_reports" androidhwext:summary="@string/pref_summary_mms_read_reports" androidhwext:defaultValue="true" androidhwext:preferenceID="@+id/mms_read_reports" />
    <com.android.mms.ui.EmuiSwitchPreference androidhwext:title="@string/pref_title_mms_auto_reply_read_reports" androidhwext:key="pref_key_mms_auto_reply_read_reports" androidhwext:summary="@string/pref_summary_mms_auto_reply_read_reports" androidhwext:defaultValue="false" androidhwext:preferenceID="@+id/mms_auto_reply_read_reports" />
    <Preference androidhwext:layout="@layout/mms_preference_status" androidhwext:title="@string/mms_auto_retrieval_text" androidhwext:key="pref_key_mms_auto_retrieval_mms" androidhwext:widgetLayout="@layout/mms_preference_widget_arrow" androidhwext:preferenceID="@+id/mms_auto_retrieval_text" />
    <com.android.mms.ui.EmuiSwitchPreference androidhwext:title="@string/mms_auto_retrieval_during_roaming_text" androidhwext:key="pref_key_mms_retrieval_during_roaming" androidhwext:defaultValue="false" androidhwext:preferenceID="@+id/mms_auto_retrieval_during_roaming_text" />
    <com.android.mms.ui.EmuiSwitchPreference androidhwext:title="@string/pref_title_mms_auto_retrieval_during_roaming_ug_card1" androidhwext:key="pref_key_mms_retrieval_during_roaming_card1" androidhwext:defaultValue="false" androidhwext:preferenceID="@+id/mms_auto_retrieval_during_roaming_ug_card1" />
    <com.android.mms.ui.EmuiSwitchPreference androidhwext:title="@string/pref_title_mms_auto_retrieval_during_roaming_ug_card2" androidhwext:key="pref_key_mms_retrieval_during_roaming_card2" androidhwext:defaultValue="false" androidhwext:preferenceID="@+id/mms_auto_retrieval_during_roaming_ug_card2" />
    <com.android.mms.ui.HwPreference androidhwext:layout="@layout/mms_preference_status_summary_advanced" androidhwext:title="@string/always_receive_and_send_mms" androidhwext:key="pref_key_always_receive_and_send_mms" androidhwext:summary="@string/always_receive_and_send_mms_summary_new" androidhwext:widgetLayout="@layout/mms_preference_widget_arrow" androidhwext:preferenceID="@+id/always_receive_and_send_mms" />
    <ListPreference androidhwext:entries="@array/prefEntries_mms_expire" androidhwext:layout="@layout/mms_preference_status" androidhwext:title="@string/pref_title_mms_expire" androidhwext:key="pref_key_mms_expire" androidhwext:summary="@string/pref_summary_mms_expire_mode_slideshowactivity3" androidhwext:widgetLayout="@layout/mms_preference_widget_arrow" androidhwext:defaultValue="@string/prefDefault_mms_expire_slidesmoothshowactivity" androidhwext:dialogTitle="@string/pref_title_mms_expire" androidhwext:entryValues="@array/prefValues_mms_expire" androidhwext:preferenceID="@+id/pref_title_mms_expire" />
    <ListPreference androidhwext:entries="@array/prefEntries_mms_expire_with_max" androidhwext:layout="@layout/mms_preference_status" androidhwext:title="@string/pref_title_mms_expire" androidhwext:key="pref_key_mms_expire_with_max" androidhwext:summary="@string/pref_summary_mms_expire_mode_max" androidhwext:widgetLayout="@layout/mms_preference_widget_arrow" androidhwext:defaultValue="@string/prefDefault_mms_expire_max" androidhwext:dialogTitle="@string/pref_title_mms_expire" androidhwext:entryValues="@array/prefValues_mms_expire_with_max" androidhwext:preferenceID="@+id/pref_title_mms_expire_with_max" />
    <com.android.mms.ui.EmuiSwitchPreference androidhwext:title="@string/pref_title_sms_wappush_enable" androidhwext:key="pref_key_sms_wappush_enable" androidhwext:defaultValue="true" androidhwext:preferenceID="@+id/sms_wappush_enable" />
    <com.android.mms.ui.EmuiSwitchPreference androidhwext:title="@string/safety_sms_dialog_title" androidhwext:key="pref_key_verifition_sms_protect_enable" androidhwext:summary="@string/verifition_sms_protect_enable_summary" androidhwext:defaultValue="true" androidhwext:preferenceID="@+id/safety_sms_dialog" />
    <ListPreference androidhwext:entries="@array/prefEntries_creation_mode" androidhwext:layout="@layout/mms_preference_status" androidhwext:title="@string/creation_mode" androidhwext:key="pref_key_creation_mode" androidhwext:summary="@string/prefDefault_summary_freemode" androidhwext:widgetLayout="@layout/mms_preference_widget_arrow" androidhwext:defaultValue="@string/prefDefault_creation_mode_freenmode" androidhwext:dialogTitle="@string/creation_mode" androidhwext:entryValues="@array/prefValues_creation_mode" androidhwext:preferenceID="@+id/creation_mode" />
</PreferenceScreen>
