<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_search" android:orderInCategory="1" android:title="@string/menu_search" />
    <item android:id="@+id/menu_make_all_as_read" android:orderInCategory="2" android:title="@string/menu_make_all_as_read" />
    <item android:id="@+id/menu_view_favorites" android:orderInCategory="3" android:title="@string/mms_myfavorite_common" />
    <item android:id="@+id/menu_preferences" android:orderInCategory="4" android:title="@string/menu_preferences" />
    <item android:id="@+id/menu_cell_broadcasts" android:orderInCategory="5" android:title="@string/menu_cell_broadcasts" />
    <item android:id="@+id/menu_debug_dump" android:orderInCategory="6" android:title="@string/menu_debug_dump" />
</menu>
