<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/androidhwext" androidhwext:key="pref_key_root">
    <ListPreference androidhwext:persistent="true" androidhwext:entries="@array/display_mode_entries" androidhwext:layout="@layout/mms_preference_status" androidhwext:title="@string/pref_title_mms_display_mode" androidhwext:key="pref_key_display_mode" androidhwext:summary="@string/pref_summary_mms_display_mode" androidhwext:widgetLayout="@layout/mms_preference_widget_arrow" androidhwext:defaultValue="0" androidhwext:entryValues="@array/display_mode_values" androidhwext:preferenceID="@+id/mms_display_mode" />
    <PreferenceCategory androidhwext:layout="@layout/preference_category" androidhwext:title="@string/pref_common_settings_title_content" androidhwext:key="pref_key_common_settings">
        <Preference androidhwext:persistent="false" androidhwext:layout="@layout/mms_preference_status" androidhwext:title="@string/smart_sms_setting_title" androidhwext:key="pref_key_smart_sms_settings" androidhwext:widgetLayout="@layout/mms_preference_widget_arrow" androidhwext:preferenceID="@+id/smart_sms_setting" />
        <Preference androidhwext:layout="@layout/listdivider" androidhwext:key="divider_pref_key_smart_sms_settings" androidhwext:preferenceID="@+id/divider_smart_sms_settings" />
        <Preference androidhwext:persistent="false" androidhwext:layout="@layout/mms_preference_status" androidhwext:title="@string/smart_archive_title" androidhwext:key="pref_key_smart_archive_enable" androidhwext:summary="@string/smart_sms_setting_status_open" androidhwext:widgetLayout="@layout/mms_preference_widget_arrow" androidhwext:preferenceID="@+id/smart_archive_enable" />
        <Preference androidhwext:layout="@layout/listdivider" androidhwext:key="divider_pref_key_smart_archive_enable" androidhwext:preferenceID="@+id/divider_smart_archive_enable" />
        <com.android.mms.ui.EmuiSwitchPreference androidhwext:title="@string/mms_pref_title_risk_url_check" androidhwext:key="pref_key_risk_url_check" androidhwext:summary="@string/risk_url_check_summary_content" androidhwext:defaultValue="false" androidhwext:preferenceID="@+id/mms_risk_url_check" />
        <Preference androidhwext:layout="@layout/listdivider" androidhwext:preferenceID="@+id/listdivider_id" />
        <com.android.mms.ui.EmuiSwitchPreference androidhwext:title="@string/pin_up_unread_message_title" androidhwext:key="pref_key_pinup_unread_message_enable" androidhwext:summary="@string/pin_up_unread_message_summary" androidhwext:defaultValue="false" androidhwext:preferenceID="@+id/pin_up_unread_message" />
        <Preference androidhwext:layout="@layout/listdivider" androidhwext:key="divider_pref_key_smart_sms_settings" androidhwext:preferenceID="@+id/smart_sms_settings" />
        <com.android.mms.ui.EmuiSwitchPreference androidhwext:title="@string/mms_pref_title_cancel_send" androidhwext:key="pref_key_cancel_send_enable" androidhwext:defaultValue="false" androidhwext:preferenceID="@+id/mms_cancel_send" />
        <Preference androidhwext:layout="@layout/listdivider" androidhwext:key="divider_pref_key_recovery_support" androidhwext:preferenceID="@+id/recovery_support" />
        <com.android.mms.ui.EmuiSwitchPreference androidhwext:title="@string/sms_recovery_title" androidhwext:key="pref_key_recovery_support" androidhwext:summary="@string/sms_recovery_summary_content" androidhwext:defaultValue="false" androidhwext:preferenceID="@+id/sms_recovery" />
    </PreferenceCategory>
    <PreferenceCategory androidhwext:layout="@layout/preference_category" androidhwext:title="@string/pref_other_settings_title" androidhwext:key="pref_key_other_settings">
        <Preference androidhwext:layout="@layout/mms_preference_status" androidhwext:title="@string/pref_ringTong_and_vibrate" androidhwext:key="pref_key_ringTong_vibrate" androidhwext:widgetLayout="@layout/mms_preference_widget_arrow" androidhwext:preferenceID="@+id/ringTong_and_vibrate" />
        <Preference androidhwext:layout="@layout/listdivider" androidhwext:preferenceID="@+id/preference_list_divider_id" />
        <com.android.mms.ui.HwPreference androidhwext:layout="@layout/mms_preference_status_summary_advanced" androidhwext:title="@string/pref_title_mms_delivery_reports_content" androidhwext:key="pref_key_delivery_reports" androidhwext:summary="@string/pref_title_mms_delivery_reports_summery" androidhwext:widgetLayout="@layout/mms_preference_widget_arrow" androidhwext:preferenceID="@+id/mms_delivery_reports_content" />
        <Preference androidhwext:layout="@layout/listdivider" androidhwext:key="divider_pref_key_delivery_reports" androidhwext:preferenceID="@+id/preference_delivery_reports" />
        <Preference androidhwext:persistent="false" androidhwext:title="@string/pref_title_storage_status" androidhwext:key="pref_key_storage_status" androidhwext:widgetLayout="@layout/mms_preference_widget_arrow" androidhwext:preferenceID="@+id/storage_status" />
        <Preference androidhwext:layout="@layout/listdivider" androidhwext:key="divider_pref_key_storage_status" androidhwext:preferenceID="@+id/divider_storage_status" />
        <Preference androidhwext:layout="@layout/mms_preference_status" androidhwext:title="@string/advanced_settings" androidhwext:key="pref_key_mms_advanced_settings" androidhwext:widgetLayout="@layout/mms_preference_widget_arrow" androidhwext:preferenceID="@+id/advanced_settings" />
        <Preference androidhwext:layout="@layout/listdivider" androidhwext:key="divider_pref_key_mms_advanced_settings" androidhwext:preferenceID="@+id/mms_advanced_settings" />
    </PreferenceCategory>
</PreferenceScreen>
